# pymcpy

./: .buildinfo  LICENSE  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  python-package.sh  search.html  searchindex.js
.github/workflows/: docs.yml
_modules/: index.html
_modules/pymcpy/: solvers.html
docs/: Makefile  conf.py  index.rst
src/pymcpy/: solvers.py
tests/: test_solvers.py
