[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pymcpy"
version = "0.1.0"
description = "Backtracking optimization solvers."
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
test = ["pytest"]
docs = ["sphinx", "sphinx-rtd-theme"]
